@@ -1,8 +1,19 @@
 .\" Copyright © 2000 Ben Collins <bcollins@debian.org>
 .\" Copyright © 2014-2016 Guillem Jover <guillem@debian.org>
 .\"
-.\" Covered under the GPL v2
+.\" This is free software; you can redistribute it and/or modify
+.\" it under the terms of the GNU General Public License as published by
+.\" the Free Software Foundation; either version 2 of the License, or
+.\" (at your option) any later version.
 .\"
+.\" This is distributed in the hope that it will be useful,
+.\" but WITHOUT ANY WARRANTY; without even the implied warranty of
+.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+.\" GNU General Public License for more details.
+.\"
+.\" You should have received a copy of the GNU General Public License
+.\" along with this program.  If not, see <https://www.gnu.org/licenses/>.
+.
 .TH debsig\-verify 1 "%RELEASE_DATE%" "%PACKAGE_VERSION%" "dpkg suite"
 .SH NAME
 debsig\-verify \- Verify signatures for a Debian format package
